Update README.md
Cleaning up Readme